# pinsheet-server

./: .gitignore  AGENTS.md  CODEBASE_IMPROVEMENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  store.py
.github/workflows/: ci.yml  release.yml
.scratch/issues/: P2_002_edit-page-styling.md
calc/: handicap.py  putting.py  scoring.py
docs/: BACKLOG.md  CONTEXT.md  DECISIONS.md  HANDOFF.md  PLUGINS.md  RUNBOOK.md  SESSION_LOG.md  test-data.md
docs/design-system/: PinSheet Dashboard_example.html  README.md  components.css  tokens.css
example_data/: courses.json
example_data/rounds/: 2026.json
plugins/cartographer/: __init__.py  blueprint.py  data.py
plugins/printables/: __init__.py  bingo.py  blueprint.py  requirements.txt  scorecard.py
scripts/: dist.sh  install-service.sh  pinsheet.service  update.sh
scripts/launchers/: launch.bat  launch.sh
source/: _helpers.py  database.py  extensions.py  main.py  models.py  plugin.py  plugin_loader.py  request_data.py  store.py
source/calc/: __init__.py  analysis.py  approach.py  composite.py  context.py  handicap.py  milestones.py  putting.py  rankings.py  scoring.py  seasons.py
source/routes/: __init__.py  admin.py  auth.py  bag.py  courses.py  (+5 more)
tests/: conftest.py  test_approach.py  test_auth.py  test_cartographer_plugin.py  test_fixtures_check.py  test_handicap.py  test_milestones.py  test_password_reset.py  test_plugin.py  test_plugin_loader.py  test_putting.py  test_rankings.py  test_round_edit.py  test_routes.py  test_scoring.py  test_seasons.py  test_store.py
(+66 files in other folders)
