[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pinsheet-server"
version = "0.3.0"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0",
    "waitress>=2.0",
    "bcrypt>=4.0",
    "flask-login>=0.6",
    "flask-limiter>=3.0",
    "flask-wtf>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-flask>=1", "pytest-cov>=5"]

[tool.setuptools.packages.find]
include = ["source", "source.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["source"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["source"]
omit = ["source/web/static/*", "source/web/templates/*"]

[tool.coverage.report]
fail_under = 43
